--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,7 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+
+# Output text fils
+semantics_correctness_test.txt
+semantics_time_test.txt
