--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,6 @@ fabric.properties
 # Output text fils
 semantics_correctness_test.txt
 semantics_time_test.txt
+
+PythonSemantics/__pycache__/*
+.idea/*
